Adjust java code